# OneCovariance

./: .gitignore  .nfs0000000026ed0a6b000004b2  .readthedocs.yaml  2x2_realspace_andrej_slics_gg.npy  2x2_realspace_andrej_slics_gm.npy  README.md  check_in_out_cls.py  conda_env.yaml  config.ini  config_2pcf_C01.ini  config_Cl_C01.ini  config_cl.ini  config_dav.ini  config_davide.ini  config_original.ini  config_test.ini  cov_input.py  covariance.py  cz_covariance.py  dnpaironecov  k.npy  log_OC_SPV3_std_neffFix  log_k_tri.npy  logtri.npy  logtrispec_ggmm_ktri.npy  new_inter_ggmm.npy  old_inter_ggmm.npy  pyproject.toml  reshape_cov_list.py  reshape_cov_list_2PCF.py  reshape_cov_list_2pcf.py  reshape_cov_list_Cl.py  setup.py  test.npy  test_onecov.npy  w_gg.npy
config_files/: config_3x2pt.ini  config_3x2pt_arbitrary_summary.ini  config_3x2pt_arbitrary_summary_compare.ini  config_3x2pt_bandpower.ini  config_3x2pt_cosebi.ini  config_3x2pt_pure_Cell.ini  config_3x2pt_pure_Cell_SMF.ini  config_3x2pt_pure_Cell_dav.ini  config_3x2pt_rcf.ini  config_6x2pt_pure_Cell.ini  config_cosmic_shear_consistency.ini  config_cz.ini  config_kids_legacy_validation.ini  config_legacy_231114.ini  config_yanza.ini
config_files_dav/: config_2PCF_C01.ini  config_3x2pt_pure_Cell_dav.ini  config_Cl_C01.ini  config_cl.ini
docs/: api.rst  conf.py  environment.yaml  index.rst  requirements.txt
levin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
onecov/: __init__.py  ccov_discrete.c  ccov_discrete.cpp  ccov_discrete.h  cov_arbitrary_summary.py  cov_bandpowers.py  cov_cosebis.py  cov_cross_summary.py  cov_discrete.py  cov_discrete_utils.py  cov_ell_space.py  cov_halo_model.py  cov_hod.py  cov_input.py  cov_k_space.py  cov_output.py  cov_polyspectra.py  (+2 more)
(+607 files in other folders)
