[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11>=2.10",
]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "PL",   # Pylint rules implemented in Ruff
    "C",    # flake8-comprehensions
    "N",    # pep8-naming
    # "D",    # pydocstyle (docstring conventions)
    "PERF", # (perflint) – linting for performance anti-patterns
    "TID",  # (flake8-tidy-imports) – warns about relative imports or certain bad import patterns
]

ignore = [
    "Q000",
    "COM812",
    "ERA001",
    #"E501", # Line too long
    "PLR0913", # too many args in function
    "PLR2004", # Magic value used in comparison
    "PLR0912",  # Too many branches
    "PLC0415", # import should be at the top-level of a file
    "D103", # Missing docstring in public function
    "D104", # missing docstring in package
    "D417", # Missing argument descriptions in the docstring
    "E741", # Ambiguous variable name
    "N806", # Variable in function should be lowercase
    "N803", # Argument name should be lowercase
    "N802", # Function name cov_4D_to_2DCLOE_3x2pt should be lowercase
    "C901", # Function too complex
    "PLR0915", # Too many statements
    "N816", # Variable in global scope should not be mixedCase
    "PLC0414", # Import alias does not rename original package
    # "B006", # Do not use mutable data structures for argument defaults
]